2016-10-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Implement cycling through available charmaps.

	* src/ftview.c (event_change_encoding): New function.
	(Process_Event): New [Tab] event to cycle through available charmaps,
	also increase index steps to 16, 256, and 4096.
	(event_help): Updated.

2016-10-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grevents.h (grKey): Typo.

2016-10-01  İsmail Dönmez  <idonmez@suse.com>

	* src/ftinspect.pro (LIBS): Fix default value.

2016-09-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Add LGC and CJK sample strings.

	* src/ftstring.c (event_text_change): New function.
	(Process_Event): New [Tab] event to cycle through sample strings.
	(event_help): Offer it.
	(status, event_font_change, main): Updated.

2016-09-16  Werner Lemberg  <wl@gnu.org>

	* src/ftbench.1: Improve.

2016-09-08  Werner Lemberg  <wl@gnu.org>

	* Version 2.7 released.
	=======================


	Tag sources with `VER-2-7'.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect.pro: Updated.

2016-08-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Programs): Use fewer casts.

2018-08-19  Werner Lemberg  <wl@gnu.org>

	[ftdump] Fix clang compiler warnings.

	* src/ftdump.c (Print_Bytecode): Use cast instead of printf length
	modifier – we would need `hh', which only glibc offers.
	(Print_Programs): Use proper casts for constant strings and 16bit
	integer types.

2018-08-19  Werner Lemberg  <wl@gnu.org>

	[ftgamma] Fix compiler warnings.

	* src/ftgamma.c (bit1, bit2, bit): Make them static.

2016-08-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdump] Hexdump composite glyf instructions too.

	* src/ftdump.c (Print_Programs): Updated.
	(Print_Bytecode): Cleaned up.

2016-08-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdump] Implement hexdump of TrueType instructions.

	This is useful when searching for interesting instructions. Pushed